# dronomy

./: .dockerignore  .env.example  .gitignore  ACCURACY_LOG.md  CONTRIBUTING.md  MERGE_DECISION.md  PLAN.md  PROJECT_GUIDE.md  PROMPT.md  README.md  STATUS.md  STRUCTURE.md  explained-dronomy.md  pyproject.toml  requirements.txt  to-dolist.txt
.github/workflows/: ci.yml
config/: config.yaml
data/: README.md
data/outputs/: E2E_NUMBERS.md  README.md  full_pipeline_roma.csv  val_loftr_12.csv  val_roma_12.csv  val_sift_12.csv  validation_loftr_mps.csv  vo_trajectory.csv
docker/: Dockerfile  Dockerfile.matchanything  Dockerfile.matchanything.cuda  RUNPOD.md  docker-compose.yml
docs/: ACCURACY_PLAN.md  JOB_B.md  LOCAL_GPU_MATCHANYTHING.md  REPORT.md  literature-review.md
docs/report/: REPORT_DRAFT.md  outline.md
notebooks/: README.md  dronomy_end_to_end.ipynb  framework_demo.ipynb
project_instructions/: transcript.txt.txt
scripts/: 00_fetch_video.py  01_extract_frames.py  02_fetch_reference.py  03_localize_frame.py  04_run_video.py  05_ingest_video.py  06_extract_gps_track.py  07_validate.py  08_vo_trajectory.py  09_trajectory_report.py  10_figures.py  _bootstrap.py  _ensure_tools.py  bench_combine.py  bench_roma_cascade.py  full_pipeline.py  run_all.py  run_e2e.py
src/dronomy_loc/: __init__.py  config.py
src/dronomy_loc/data/: __init__.py  fetch.py  frames.py  ingest.py  intrinsics.py  telemetry.py
src/dronomy_loc/datasets/: __init__.py  base.py  satloc.py  uavvisloc.py  video.py
src/dronomy_loc/eval/: __init__.py  metrics.py
src/dronomy_loc/export/: __init__.py  geojson.py  kml.py
src/dronomy_loc/framework/: __init__.py  runner.py  schema.py
src/dronomy_loc/localize/: __init__.py  altitude.py  fusion.py  manual_anchor.py  multisource.py  odometry.py  pipeline.py  search.py  trajectory.py  validate.py
src/dronomy_loc/matching/: __init__.py  base.py  classical.py  deep.py  matchanything.py  roma_mps.py
tests/: test_altitude.py  test_camera_geometry.py  test_dataset_uavvisloc.py  test_dataset_video.py  test_export.py  test_fetch.py  test_figures.py  test_figures_jobb.py  test_fusion.py  test_geo.py  test_ingest.py  test_intrinsics.py  test_manual_anchor.py  test_matchanything.py  test_metrics.py  test_models.py  test_multisource.py  test_odometry.py  test_providers.py  test_runner.py  test_search.py  test_telemetry.py  test_trajectory.py  test_validate.py
(+13 files in other folders)
