[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dronomy-loc"
version = "0.1.0"
description = "GPS-denied visual localization of drone footage against satellite imagery (IE x Dronomy capstone)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "scikit-image",
    "Pillow",
    "matplotlib",
    "PyYAML",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
deep = ["torch", "torchvision", "kornia"]
gee = ["earthengine-api", "geemap"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
